k8s/flag-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: 975049924046.dkr.ecr.us-east-1.amazonaws.com/flag-service:latest

          ports:
            - containerPort: 8002

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 5  

          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 20
            periodSeconds: 10
