k8s/flag-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - port: 80
      targetPort: 8002
